[package]
name = "lumen-blocks-starter"
version = "0.1.0"
authors = ["Daniel D’Aquino <daniel@daquino.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
lumen-blocks = { git = "https://github.com/Leaf-Computer/lumen-blocks.git", rev = "v0.1.0" }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
